--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -169,6 +169,8 @@
     <string name="tweet_source_prefix">來自</string>
     <string name="tweet_reply_to_prefix">給</string>
     <string name="tweet_reply_to_suffix">的回復</string>
+    <string name="tweet_repost_prefix">轉自</string>
+    <string name="tweet_repost_suffix"></string>
     <string name="tweet_created_at_beautify_prefix"></string>
     <string name="tweet_created_at_beautify_sec">秒</string>
     <string name="tweet_created_at_beautify_min">分鐘</string>
