--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -169,6 +169,8 @@
     <string name="tweet_source_prefix">来自</string>
     <string name="tweet_reply_to_prefix">给</string>
     <string name="tweet_reply_to_suffix">的回复</string>
+    <string name="tweet_repost_prefix">转自</string>
+    <string name="tweet_repost_suffix"></string>
     <string name="tweet_created_at_beautify_prefix"></string>
     <string name="tweet_created_at_beautify_sec">秒</string>
     <string name="tweet_created_at_beautify_min">分钟</string>
